crates/indexing/tests/snapshots/indexing__infix_errors.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateExprItem {
        item_id: Id(
            0,
        ),
        duplicate: Declaration(
            Id(
                2,
            ),
        ),
    },
    DuplicateTypeItem {
        item_id: Id(
            0,
        ),
        duplicate: Declaration(
            Id(
                3,
            ),
        ),
    },
]
