crates/indexing/tests/snapshots/indexing__type_late_signature.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    InvalidOrder {
        early: Id(
            0,
        ),
        late: Id(
            1,
        ),
    },
]
