crates/indexing/tests/snapshots/indexing__type_non_consecutive.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    NonConsecutive {
        first: Id(
            0,
        ),
        second: Id(
            3,
        ),
    },
]
