crates/indexing/tests/snapshots/indexing__value_duplicate_signature.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateSignature {
        signature: Id(
            0,
        ),
        duplicate: Id(
            3,
        ),
    },
]
