crates/indexing/tests/snapshots/indexing__value_late_signature.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    InvalidOrder {
        early: Id(
            0,
        ),
        late: Id(
            2,
        ),
    },
]
