crates/indexing/tests/snapshots/indexing__value_non_consecutive.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    NonConsecutive {
        first: Id(
            1,
        ),
        second: Id(
            3,
        ),
    },
]
