crates/indexing/tests/snapshots/indexing__well_formed_export.snap
---
source: crates/indexing/tests/indexing.rs
expression: snapshot
snapshot_kind: text
---
life: Some((Id(0), Value(ValueGroupId { signature: None, equations: [Id(0)] }), Some(Id(0))))
eq_class: Some((Id(0), Class(TypeGroupId { signature: None, declaration: Some(Id(1)), role: None }), Some(Id(1))))
synonym: Some((Id(1), Synonym(TypeGroupId { signature: None, declaration: Some(Id(2)), role: None }), Some(Id(2))))
data: Some((Id(2), Data(TypeGroupId { signature: None, declaration: Some(Id(3)), role: None }), Some(Id(3))))
data_a: Some((Id(1), Constructor(Id(0)), Some(Id(3))))
data_b: Some((Id(2), Constructor(Id(1)), Some(Id(3))))
list: Some((Id(3), Data(TypeGroupId { signature: None, declaration: Some(Id(4)), role: None }), Some(Id(4))))
list_cons: Some((Id(3), Constructor(Id(2)), Some(Id(4))))
list_nil: Some((Id(4), Constructor(Id(3)), Some(Id(4))))
plus: Some((Id(5), Operator(Id(5)), Some(Id(5))))
plus_type: Some((Id(4), Operator(Id(6)), Some(Id(6))))
export: Some([Id(0)])
