crates/indexing/tests/snapshots/indexing__well_formed_module.snap
---
source: crates/indexing/tests/indexing.rs
expression: snapshot
snapshot_kind: text
---
prelude: Some([Id(0)])
data_list: Some([Id(1)])
halogen: Some([Id(2), Id(3)])
id: Some((Id(0), Value(ValueGroupId { signature: Some(Id(0)), equations: [Id(1)] }), None))
maybe: Some((Id(0), Data(TypeGroupId { signature: Some(Id(2)), declaration: Some(Id(3)), role: Some(Id(4)) }), None))
just: Some((Id(1), Constructor(Id(0)), None))
nothing: Some((Id(2), Constructor(Id(1)), None))
eq_class: Some((Id(1), Class(TypeGroupId { signature: Some(Id(5)), declaration: Some(Id(6)), role: None }), None))
eq: Some((Id(3), ClassMember(Id(0)), None))
eq_int: Some((Id(4), Instance(Id(0)), None))
identity: Some((Id(2), Newtype(TypeGroupId { signature: Some(Id(8)), declaration: Some(Id(9)), role: Some(Id(10)) }), None))
identity_int: Some((Id(3), Synonym(TypeGroupId { signature: Some(Id(11)), declaration: Some(Id(12)), role: None }), None))
prim_eq_int: Some((Id(6), Foreign(Id(13)), None))
functor: Some((Id(4), Foreign(TypeGroupId { signature: None, declaration: Some(Id(14)), role: Some(Id(15)) }), None))
eq_identity: Some((Id(7), Derive(Id(16)), None))
expr_equal: Some((Id(8), Operator(Id(17)), None))
type_equal: Some((Id(5), Operator(Id(18)), None))
